--- a/metro-eureka-server/pom.xml
+++ b/metro-eureka-server/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.metroservice</groupId>
-	<artifactId>eureka-server</artifactId>
+	<artifactId>metro-eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>eureka-server</name>
+	<name>metro-eureka-server</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
