--- a/metro-route-service/src/main/resources/application.properties
+++ b/metro-route-service/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.jpa.hibernate.ddl-auto=none
 server.port=8100
+
+
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=password
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.=debug
