--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
     <module>metro-config-server</module>
     <module>metro-eureka-server</module>
     <module>metro-zuul-service</module>
+    <module>metro-route-service</module>
   </modules>
 </project>
