--- a/metro-route-service/pom.xml
+++ b/metro-route-service/pom.xml
@@ -45,12 +45,19 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
+<!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
+<dependency>
+    <groupId>oracle</groupId>
+    <artifactId>ojdbc6</artifactId>
+    <version>11.2.0.3</version>
+</dependency>
+<!--		
         <dependency>
           <groupId>com.oracle</groupId>
               <artifactId>ojdbc7</artifactId>
               <version>12.1.0.2</version>
         </dependency>
-
+-->
 <!--
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -74,5 +81,10 @@
 		</plugins>
 	</build>
 
-
+<repositories>
+    <repository>
+      <id>datanucleus</id>
+      <url>http://www.datanucleus.org/downloads/maven2/</url>
+    </repository>
+ </repositories>
 </project>
