--- a/metro-eureka-server/src/main/resources/application.properties
+++ b/metro-eureka-server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-server.port=8090
+eureka.instance.hostname= localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+server.port=8081
+
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
