--- a/metro-train-service/src/main/resources/application.properties
+++ b/metro-train-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 server.port=8200
+eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=train
