--- a/metro-route-service/src/main/resources/application.properties
+++ b/metro-route-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 server.port=8100
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 
 # Oracle settings
