--- a/metro-eureka-server/pom.xml
+++ b/metro-eureka-server/pom.xml
@@ -54,7 +54,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>repackage</goal>
+                    </goals>
+                    <configuration>
+                      <classifier>spring-boot</classifier>
+                    </configuration>
+                  </execution>
+                </executions>
+          </plugin>
 		</plugins>
 	</build>
 
