--- a/metro-route-service/pom.xml
+++ b/metro-route-service/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.3.RELEASE</version>
+		<version>2.0.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -57,19 +57,17 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
         
-<!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
-<!--
-<dependency>
-    <groupId>oracle</groupId>
-    <artifactId>ojdbc6</artifactId>
-    <version>11.2.0.3</version>
-</dependency>
--->
+        
         <dependency>
-          <groupId>com.oracle</groupId>
+              <groupId>com.oracle</groupId>
               <artifactId>ojdbc7</artifactId>
               <version>12.1.0.2</version>
-        </dependency>
+              <type>jar</type>
+              <scope>system</scope>
+              <systemPath>${project.basedir}/lib/ojdbc7-12.1.0.2.jar</systemPath>
+        </dependency>        
+        
+        
 <!--
 		<dependency>
 			<groupId>com.h2database</groupId>
