--- a/metro-scheduler-service/pom.xml
+++ b/metro-scheduler-service/pom.xml
@@ -33,11 +33,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0</version>
-        </dependency>
+        
+        <dependency>
+              <groupId>com.oracle</groupId>
+              <artifactId>ojdbc7</artifactId>
+              <version>12.1.0.2</version>
+              <type>jar</type>
+              <scope>system</scope>
+              <systemPath>${project.basedir}/lib/ojdbc7-12.1.0.2.jar</systemPath>
+        </dependency>        
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
