--- a/metro-route-service/pom.xml
+++ b/metro-route-service/pom.xml
@@ -110,6 +110,9 @@
                     </configuration>
                   </execution>
                 </executions>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>                
           </plugin>
 		</plugins>
 	</build>
