--- a/metro-train-service/pom.xml
+++ b/metro-train-service/pom.xml
@@ -97,7 +97,10 @@
                     </configuration>
                   </execution>
                 </executions>
-          </plugin>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
