--- a/metro-zuul-service/src/main/resources/application.properties
+++ b/metro-zuul-service/src/main/resources/application.properties
@@ -1,3 +1,28 @@
-zuul.routes.producer.url=http://localhost:8083
-eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka
-server.port=8079
+spring.application.name=metro-gateway-service
+server.port=8989
+server.error.whitelabel.enabled=false
+
+eureka.client.service-url.defaultZone = http://localhost:8081/eureka/
+
+eureka.instance.prefer-ip-address=true
+
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+
+logging.file=gatewayservice.log
+
+zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+# starting the connection
+zuul.host.connect-timeout-millis= 120000
+# monitor the continuous incoming data flow 
+zuul.host.socket-timeout-millis= 120000
+
+zuul.routes.login.path=/login/**
+zuul.routes.login.url=http://rkalyana-lap.in.oracle.com:8084
+
+zuul.routes.registration.path=/registration/**
+zuul.routes.registration.url=http://rkalyana-lap.in.oracle.com:8084
+
+zuul.routes.admin.path=/admin/**
+zuul.routes.admin.url=http://rkalyana-lap.in.oracle.com:8084
+
