--- a/metro-eureka-server/src/main/resources/application.properties
+++ b/metro-eureka-server/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 eureka.instance.hostname= localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-
+eureka.server.enable-self-preservation=false
 server.port=8081
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+
+logging.file=eurekaserver.log
