--- a/metro-userregistration-service/src/main/resources/application.properties
+++ b/metro-userregistration-service/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8762
  
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
-spring.datasource.password=Password123
+spring.datasource.username=metuser
+spring.datasource.password=password
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
  
 # logging
