--- a/metro-eureka-server/src/main/resources/application.properties
+++ b/metro-eureka-server/src/main/resources/application.properties
@@ -1,17 +1,12 @@
+server.port=8761
 
-eureka.instance.hostname= localhost
+eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
-server.port=8081
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
-
-logging.file=eurekaserver.log
-server.port=8761
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.instance.hostname= localhost
+logging.level.org.springframework=INFO
+logging.file=eureka_server.log
