--- a/metro-train-service/src/main/resources/application.properties
+++ b/metro-train-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
 server.port=8200
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+#server.error.whitelabel.enabled=false
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
