bulk revert from pre version

--- a/metro-config-server/src/main/resources/application.properties
+++ b/metro-config-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.profiles.active=native
+#default port number for config server is 8888
 server.port=8888
+
+spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/common-config
