--- a/metro-userregistration-service/src/main/resources/application.properties
+++ b/metro-userregistration-service/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-spring.application.name=USER-REGISTRATION-SERVICE
+server.port=8300
+
 # EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=false
-server.port=8762
 # create and drop tables and sequences, loads import.sql
 #spring.jpa.hibernate.ddl-auto=create-drop
  
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
-spring.datasource.password=Password123
+spring.datasource.username=metuser
+spring.datasource.password=password
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
  
 # logging
