--- a/metro-zuul-service/src/main/resources/application.properties
+++ b/metro-zuul-service/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-spring.application.name=metro-gateway-service
-server.port=8989
+server.port=8900
 server.error.whitelabel.enabled=false
-
-eureka.client.service-url.defaultZone = http://localhost:8081/eureka/
-
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
-
+logging.level.org.springframework=INFO
 logging.file=gatewayservice.log
 
 zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
