login service - port:8300

--- a/metro-login-service/src/main/resources/application.properties
+++ b/metro-login-service/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=metro-login-service
+server.port=8300
 eureka.client.service-url.defaultZone = http://localhost:8081/eureka/
-server.port=8084
 server.error.whitelabel.enabled=false
 
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
-
+logging.level.org.springframework=INFO
 logging.file=loginservice.log
 
 # create and drop tables and sequences, loads import.sql
