--- a/metro-eureka-server/pom.xml
+++ b/metro-eureka-server/pom.xml
@@ -26,15 +26,15 @@
 	</properties>
 
 	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
 	</dependencyManagement>
 
 	
@@ -82,11 +82,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-
-				<configuration>
-					<mainClass>com.metroservice.eurekaserver.EurekaServerApplication</mainClass>
-					<addResources>true</addResources>
-				</configuration>
                 <executions>
                   <execution>
                     <goals>
@@ -97,6 +92,9 @@
                     </configuration>
                   </execution>
                 </executions>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>                
           </plugin>
 		</plugins>
 	</build>
