--- a/metro-userregistration-service/pom.xml
+++ b/metro-userregistration-service/pom.xml
@@ -88,6 +88,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>repackage</goal>
+                    </goals>
+                    <configuration>
+                      <classifier>spring-boot</classifier>
+                    </configuration>
+                  </execution>
+                </executions>
                 <configuration>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>                
