--- a/metro-zuul-service/src/main/resources/application.properties
+++ b/metro-zuul-service/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=metro-gateway-service
 server.port=8989
 server.error.whitelabel.enabled=false
 
-eureka.client.service-url.defaultZone = http://localhost:8081/eureka/
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 
 logging.file=gatewayservice.log
 
@@ -18,4 +18,13 @@ zuul.host.connect-timeout-millis= 120000
 zuul.host.socket-timeout-millis= 120000
 
 zuul.routes.login.path=/login/**
-zuul.routes.login.url=http://rkalyana-lap.in.oracle.com:8084
+zuul.routes.login.url=http://localhost:8084
+
+zuul.routes.train.path=/train/**
+zuul.routes.train.url=http://localhost:8200
+zuul.routes.train.stripPrefix=false
+
+
+zuul.routes.trains.path=/trains/**
+zuul.routes.trains.url=http://localhost:8200
+zuul.routes.trains.stripPrefix=false
