revert accidental delete

--- a/metro-zuul-service/src/main/resources/application.properties
+++ b/metro-zuul-service/src/main/resources/application.properties
@@ -14,13 +14,4 @@ zuul.host.connect-timeout-millis= 120000
 zuul.host.socket-timeout-millis= 120000
 
 zuul.routes.login.path=/login/**
-zuul.routes.login.url=http://localhost:8084
-
-zuul.routes.train.path=/train/**
-zuul.routes.train.url=http://localhost:8200
-zuul.routes.train.stripPrefix=false
-
-
-zuul.routes.trains.path=/trains/**
-zuul.routes.trains.url=http://localhost:8200
-zuul.routes.trains.stripPrefix=false
+zuul.routes.login.url=http://rkalyana-lap.in.oracle.com:8084
