--- a/metro-config-server/src/main/resources/application.properties
+++ b/metro-config-server/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 #default port number for config server is 8888
 server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/microservice-poc/ms-config
+spring.cloud.config.server.git.clone-on-start=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/common-config
