--- a/metro-login-service/src/main/resources/application.properties
+++ b/metro-login-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8300
-eureka.client.service-url.defaultZone = http://localhost:8081/eureka/
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 server.error.whitelabel.enabled=false
 
 logging.level.root=INFO
@@ -13,7 +13,7 @@ logging.file=loginservice.log
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:oracle:thin:@RKALYANA-LAP.in.oracle.com:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=METUSER
 spring.datasource.password=METUSER
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
