MS POC: Configured zull for other services.

--- a/metro-zuul-service/src/main/resources/application.properties
+++ b/metro-zuul-service/src/main/resources/application.properties
@@ -16,11 +16,30 @@ zuul.host.socket-timeout-millis= 120000
 zuul.routes.login.path=/login/**
 zuul.routes.login.url=http://localhost:8084
 
+#Train Service
 zuul.routes.train.path=/train/**
 zuul.routes.train.url=http://localhost:8200
 zuul.routes.train.stripPrefix=false
 
+#Root Service
+zuul.routes.route.path=/route/**
+zuul.routes.route.url=http://localhost:8100
+zuul.routes.route.stripPrefix=false
 
-zuul.routes.trains.path=/trains/**
-zuul.routes.trains.url=http://localhost:8200
-zuul.routes.trains.stripPrefix=false
+#Schedule service
+zuul.routes.schedules.path=/schedules/**
+zuul.routes.schedules.url=http://localhost:8400
+zuul.routes.schedules.stripPrefix=false
+
+#User Registration service
+zuul.register.register.path=/register/**
+zuul.register.register.url=http://localhost:8500
+zuul.register.register.stripPrefix=false
+
+#Login service
+zuul.register.login.path=/login/**
+zuul.register.login.url=http://localhost:8300
+zuul.register.login.stripPrefix=false
+
+
+
