--- a/metro-config-server/src/main/resources/application.properties
+++ b/metro-config-server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #default port number for config server is 8888
-server.port=8888
+server.port=8200
+
 spring.cloud.config.server.git.uri=https://github.com/microservice-poc/ms-config
 spring.cloud.config.server.git.clone-on-start=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.server.git.proxy.https.host=odc-proxy.idc.oracle.com
+spring.cloud.config.server.git.proxy.https.port=80
 
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:/common-config
+management.security.enabled=false
