--- a/metro-ui-service/pom.xml
+++ b/metro-ui-service/pom.xml
@@ -79,6 +79,12 @@
               <systemPath>${project.basedir}/lib/ojdbc7-12.1.0.2.jar</systemPath>
         </dependency>        
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
