--- a/metro-route-service/pom.xml
+++ b/metro-route-service/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
         
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
         
         <dependency>
               <groupId>com.oracle</groupId>
