--- a/metro-train-service/src/main/resources/bootstrap.properties
+++ b/metro-train-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=metro-train-service
 
-spring.cloud.config.uri=http://localhost:8200/
+spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
