--- a/metro-ui-service/pom.xml
+++ b/metro-ui-service/pom.xml
@@ -70,6 +70,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
+            <version>1.4.5.RELEASE</version>
+		</dependency>
+        
         <dependency>
               <groupId>com.oracle</groupId>
               <artifactId>ojdbc7</artifactId>
