--- a/metro-ui-service/pom.xml
+++ b/metro-ui-service/pom.xml
@@ -75,7 +75,11 @@
 			<artifactId>spring-cloud-starter-zuul</artifactId>
             <version>1.4.5.RELEASE</version>
 		</dependency>
-        
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+			<version>1.4.5.RELEASE</version>
+		</dependency>
         <dependency>
               <groupId>com.oracle</groupId>
               <artifactId>ojdbc7</artifactId>
