--- a/metro-train-service/src/main/resources/application.properties
+++ b/metro-train-service/src/main/resources/application.properties
@@ -16,4 +16,6 @@
 #logging.level.org.hibernate.SQL=debug
 ##logging.level.org.hibernate.type.descriptor.sql=trace
 ##logging.level.=debug
+kafka.producer.servers=127.0.0.1:9092
+kafka.train.topic=train_topic
 
