--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,8 @@
     <module>metro-ui-service</module>
     <module>metro-zuul-service</module>
     <module>metro-scheduler-consumer</module>
-    <!--
     <module>metro-scheduler-service</module>
-    <module>metro-userregistration-service</module>
+    <!--<module>metro-userregistration-service</module>
     -->
   </modules>
 </project>
