--- a/metro-userregistration-service/src/main/resources/bootstrap.properties
+++ b/metro-userregistration-service/src/main/resources/bootstrap.properties
@@ -1,1 +1,4 @@
 spring.application.name=metro-userregistration-service
+
+spring.cloud.config.uri=http://localhost:8888
+management.security.enabled=false
