--- a/metro-oauth2-jwtserver/pom.xml
+++ b/metro-oauth2-jwtserver/pom.xml
@@ -61,11 +61,14 @@
 			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.2.0</version>
-		</dependency>
+        <dependency>
+              <groupId>com.oracle</groupId>
+              <artifactId>ojdbc7</artifactId>
+              <version>12.1.0.2</version>
+              <type>jar</type>
+              <scope>system</scope>
+              <systemPath>${project.basedir}/lib/ojdbc7-12.1.0.2.jar</systemPath>
+        </dependency>        
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
