--- a/metro-schedule-consumer/pom.xml
+++ b/metro-schedule-consumer/pom.xml
@@ -3,8 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.metroservice.schedule.consumer</groupId>
-	<artifactId>scheduler-consumer</artifactId>
+	
+	<groupId>com.metroservice</groupId>
+	<artifactId>metro-schedule-consumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
