updated consumer props

--- a/metro-schedule-consumer/src/main/resources/application.properties
+++ b/metro-schedule-consumer/src/main/resources/application.properties
@@ -2,3 +2,15 @@ kafka.producer.servers=127.0.0.1:9092
 kafka.route.topic=route_topic
 route.group=route_group
 train.group=train_group
+
+server.port=8401
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=schedule
+spring.datasource.password=schedule
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
+
+spring.jpa.hibernate.ddl-auto=none
