--- a/metro-oauth2-jwtserver/pom.xml
+++ b/metro-oauth2-jwtserver/pom.xml
@@ -46,29 +46,18 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
-		<!-- jdbc token store -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-
-        <dependency>
               <groupId>com.oracle</groupId>
               <artifactId>ojdbc7</artifactId>
               <version>12.1.0.2</version>
               <type>jar</type>
               <scope>system</scope>
               <systemPath>${project.basedir}/lib/ojdbc7-12.1.0.2.jar</systemPath>
-        </dependency>        
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -77,43 +66,15 @@
 
 		<!-- oauth -->
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.3.4.RELEASE</version>		
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.9.RELEASE</version>			
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
 		</dependency>
 		
-		<!-- test -->
-
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>                        
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-security</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency>
-
-		<dependency>
-		    <groupId>io.rest-assured</groupId>
-		    <artifactId>rest-assured</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
