--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
     <module>metro-train-service</module>
     <module>metro-ui-service</module>
     <module>metro-zuul-service</module>
-    <module>metro-scheduler-consumer</module>
+    <module>metro-schedule-consumer</module>
     <module>metro-scheduler-service</module>
-    <!--<module>metro-userregistration-service</module>
-    -->
-  </modules>
+    <module>metro-userregistration-service</module>
+    <module>metro-oauth2-jwtserver</module>
+
+    </modules>
 </project>
